[package]
name = "codember"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "reto1"
src = "Challenge-01/main.rs" 
path = "Challenge-01/main.rs"

[[bin]]
name = "reto2"
src = "Challenge-02/main.rs" 
path = "Challenge-02/main.rs"

[[bin]]
name = "reto3"
src = "Challenge-03/main.rs" 
path = "Challenge-03/main.rs"

[[bin]]
name = "reto4"
src = "Challenge-04/main.rs" 
path = "Challenge-04/main.rs"

[dependencies]
minreq = { version = "2.6.0", features = ["https"] }
